# velmwheel

./: README.md
robot_localization/: CMakeLists.txt  package.xml
robot_localization/include/robot_localization/: ekf.h  filter_base.h  navsat_transform.h  ros_filter.h
robot_localization/launch/: ekf_nodelet_template.launch  ekf_template.launch
robot_localization/params/: ekf_template.yaml
robot_localization/src/: ekf.cpp  filter_base.cpp  navsat_transform.cpp  ros_filter.cpp
scripts/: setup.bash  velmwheel_sim_kinetic.rosinstall
velmobil_gl/: CMakeLists.txt  package.xml
velmobil_gl/include/intensity_map_lib/: intensity_map_lib.h
velmobil_gl/param/: global_localization_params.yaml
velmobil_gl/scripts/: my_map.xml  show_map.py
velmobil_gl/src/: intensity_map_lib.cpp  velmobil_gl.cpp  velmobil_gl.h
velmwheel_bias_estimator/: CMakeLists.txt  bias_log_data.txt  package.xml
velmwheel_bias_estimator/param/: bias_estimator_params.yaml
velmwheel_bias_estimator/src/: velmwheel_bias_estimator.cpp  velmwheel_bias_estimator.h
velmwheel_bringup/: CMakeLists.txt  package.xml
velmwheel_bringup/config/: master_config.yaml  velmwheel.ops
velmwheel_bringup/launch/: 3dconnexion.launch  velmwheel.launch
velmwheel_bringup/launch/include/: amcl_velmobil.launch
velmwheel_core/: CMakeLists.txt  package.xml
velmwheel_core/param/: core_driver_params.yaml
velmwheel_core/src/: VelmWheel_core.cpp  VelmWheel_core.h
velmwheel_description/: CMakeLists.txt  package.xml
velmwheel_description/maps/: map_p109.pgm  map_p109.yaml
velmwheel_description/src/: parser.cpp
velmwheel_description/urdf/: velmobil.urdf.xacro  velmobil_laser_poses.xacro
velmwheel_fusion/: CMakeLists.txt  package.xml
velmwheel_fusion/src/: VelmWheel_fusion.cpp  VelmWheel_fusion.h  mobile_robot_wall_cts.h  nonlinearanalyticconditionalgaussianmobile.cpp  test_nonlinear_kalman.cpp
velmwheel_laser_driver/: CMakeLists.txt  package.xml
velmwheel_laser_driver/param/: laser_driver_params.yaml
velmwheel_laser_driver/src/: VelmWheel_laser_driver.cpp  VelmWheel_laser_driver.h
