<package>
  <name>velmobil_gl</name>
  <version>0.0.4</version>
  <description>Velmobil global localizationpkg.</description>
  <maintainer email="wojciechdudek.mail@gmail.com">Wojciech Dudek</maintainer>
  
  <license>BSD</license>
  
  <author>Wojciech Dudek</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend>
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 

  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
    </rtt_ros>
  </export>
</package>
