<package>
  <name>velmwheel_core</name>
  <version>0.0.4</version>
  <description>VelmWheel core pkg.</description>
  <maintainer email="wojciechdudek.mail@gmail.com">Wojciech Dudek</maintainer>
  
  <license>BSD</license>
  
  <author>Wojciech Dudek</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 

  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_std_msgs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>
</package>