<package>
  <name>velmwheel_description</name>
  <version>0.0.4</version>
  <description>VelmWheel description pkg.</description>
  <maintainer email="wojciechdudek.mail@gmail.com">Wojciech Dudek</maintainer>
  
  <license>BSD</license>
  
  <author>Wojciech Dudek</author>
  
  <buildtool_depend>catkin</buildtool_depend>  
<build_depend>xacro</build_depend>
<run_depend>xacro</run_depend>
<build_depend>urdf</build_depend>
<run_depend>urdf</run_depend>

</package>
