<package>
  <name>velmwheel_fusion</name>
  <version>0.0.4</version>
  <description>VelmWheel fusion pkg.</description>
  <maintainer email="wojciechdudek.mail@gmail.com">Wojciech Dudek</maintainer>
  
  <license>BSD</license>
  
  <author>Wojciech Dudek</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend> 
  <build_depend>rtt_ros</build_depend> 
  <build_depend>std_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>sensor_msgs</build_depend> 
  <build_depend>orocos_bfl</build_depend> 
  <build_depend>robot_localization</build_depend> 

  <run_depend>rtt</run_depend> 
  <run_depend>rtt_ros</run_depend> 
  <run_depend>rtt_rosnode</run_depend> 
  <run_depend>rtt_roscomm</run_depend> 
  <run_depend>rtt_rosparam</run_depend> 
  <run_depend>rtt_std_msgs</run_depend> 
  <run_depend>rtt_std_srvs</run_depend> 
  <run_depend>orocos_bfl</run_depend> 
  <run_depend>robot_localization</run_depend> 

  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_rosparam</plugin_depend>
      <plugin_depend>rtt_std_msgs</plugin_depend>
      <plugin_depend>rtt_std_srvs</plugin_depend>
    </rtt_ros>
  </export>
</package>
